# real-time-sources

./: .gitignore  .gitleaksignore  058-events-md-generator.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE.md  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  agencies.json  app.js  catalog.json  index.html  mypy.ini  style.css
aisstream/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate_amqp_producer.ps1  generate_mqtt_producer.ps1  generate_producer.ps1  pyproject.toml
autobahn/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-mqtt.json  azure-template-with-eventhub.json  azure-template-with-servicebus.json  azure-template.json  generate_amqp_producer.ps1  generate_mqtt_producer.ps1  generate_producer.ps1  pyproject.toml  pytest.ini
billetto/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate_producer.ps1  pyproject.toml
bluesky/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate-template.ps1  generate_mqtt_producer.ps1  generate_producer.ps1  pyproject.toml  pytest.ini  requirements.txt
bom-australia/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventgrid-mqtt.json  azure-template-with-eventhub.json  azure-template.json  generate_producer.ps1  pyproject.toml
canada-aqhi/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-amqp.json  azure-template-mqtt.json  azure-template-with-eventhub.json  azure-template.json  generate_producer.ps1  pyproject.toml  pytest.ini
canada-eccc-wateroffice/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-mqtt.json  azure-template-with-eventhub.json  azure-template-with-servicebus.json  azure-template.json  generate_producer.ps1  pyproject.toml  pytest.ini
chmi-hydro/: .coverage  CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate_producer.ps1  l2eurmm4.component-detection-pip-report.json  pyproject.toml  requirements.txt
digitraffic-maritime/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate-template.ps1  generate_producer.ps1  pyproject.toml
digitraffic-road/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventgrid-mqtt.json  azure-template-with-eventhub.json  azure-template-with-servicebus.json  azure-template.json  generate-template.ps1  generate_producer.ps1  pyproject.toml
dwd/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  FABRIC.md  README.md  azure-template-amqp.json  azure-template-with-eventhub.json  azure-template.json  generate-template.ps1  generate_amqp_producer.ps1  generate_producer.ps1  pyproject.toml
eaws-albina/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template-with-servicebus.json  azure-template.json  generate_amqp_producer.ps1  generate_producer.ps1  pyproject.toml
entsoe/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.kafka  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-mqtt-eg.json  azure-template-mqtt.json  azure-template-with-eventhub.json  azure-template.json  generate-template.ps1  generate_producer.ps1  pyproject.toml  pytest.ini
entur-norway/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template.json  generate_amqp_producer.ps1  generate_producer.ps1  pyproject.toml
environment-canada/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-mqtt.json  azure-template-with-eventhub.json  azure-template.json  generate_producer.ps1  pyproject.toml
fienta/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventgrid-mqtt.json  azure-template-with-servicebus.json  azure-template.json  generate_producer.ps1  pyproject.toml
gdacs/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate_amqp_producer.ps1  generate_producer.ps1  pyproject.toml
geosphere-austria/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate_producer.ps1  pyproject.toml
gtfs/: .coverage  .gitignore  CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  Dockerfile.mta-nyc  EVENTS.md  Makefile  README.md  azure-template-mqtt.json  azure-template-with-eventhub.json  azure-template.json  generate-template.ps1  generate_producer.ps1  install.bat  install.sh  pyproject.toml  pytest.ini  requirements.txt
hko-hong-kong/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template-with-servicebus.json  azure-template.json  generate_mqtt_producer.ps1  generate_producer.ps1  pyproject.toml
hubeau-hydrometrie/: 2azp5l53.component-detection-pip-report.json  CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventgrid-mqtt.json  azure-template-with-eventhub.json  azure-template-with-servicebus.json  azure-template.json  copy_generated_producer.ps1  fix_imports.ps1  generate-template.ps1  generate_producer.ps1  pyproject.toml  pytest.ini  requirements.txt
imgw-hydro/: CONTAINER.md  Dockerfile  Dockerfile.amqp  Dockerfile.mqtt  EVENTS.md  README.md  azure-template-with-eventhub.json  azure-template.json  generate_producer.ps1  pyproject.toml  pytest.ini  requirements.txt
irail/: CONTAINER.md  Dockerfile  Dockerfile.amqp  (+9 more)
(+31391 files in other folders)
