[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aisstream"
version = "0.1.0"
description = "AISstream.io bridge — global AIS vessel tracking data to Kafka as CloudEvents"
authors = ["Clemens Vasters <clemensv@microsoft.com>"]
packages = [{include = "aisstream"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
websockets = ">=13.0"
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0,<2.0.0"
dataclasses_json = ">=0.6.7"
avro = ">=1.11.3"
aisstream_producer_data = {path = "aisstream_producer/aisstream_producer_data"}
aisstream_producer_kafka_producer = {path = "aisstream_producer/aisstream_producer_kafka_producer"}

[tool.poetry.dev-dependencies]
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"

[tool.poetry.scripts]
aisstream = "aisstream:main"
