[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autobahn"
version = "0.1.0"
description = "German Autobahn traffic data bridge"
authors = ["Clemens Vasters <clemensv@microsoft.com>"]
packages = [{ include = "autobahn" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = ">=3.10.5"
avro = ">=1.12.1"
cloudevents = ">=1.11.0,<2.0.0"
confluent-kafka = ">=2.5.3"
dataclasses-json = ">=0.6.7"
autobahn_producer_data = { path = "autobahn_producer/autobahn_producer_data" }
autobahn_producer_kafka_producer = { path = "autobahn_producer/autobahn_producer_kafka_producer" }

[tool.poetry.dev-dependencies]
pytest = ">=8.3.3"
testcontainers = ">=4.8.1"

[tool.poetry.scripts]
autobahn = "autobahn:main"