[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chmi_hydro"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "confluent_kafka",
    "cloudevents>=1.11.0",
    "requests",
    "dataclasses-json",
]

[project.scripts]
chmi_hydro = "chmi_hydro:main"

[tool.setuptools.packages.find]
include = ["chmi_hydro*"]
