[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chmi-hydro"
version = "0.1.0"
description = "Czech Hydrometeorological Institute (ČHMÚ) Hydrology bridge to Apache Kafka"
authors = ["Clemens Vasters"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.32.3"
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0,<2.0.0"
dataclasses_json = ">=0.6.7"
avro = ">=1.11.3"
chmi_hydro_producer_data = {path = "chmi_hydro_producer_tmp/chmi_hydro_producer_data"}
chmi_hydro_producer_kafka_producer = {path = "chmi_hydro_producer_tmp/chmi_hydro_producer_kafka_producer"}

[tool.poetry.scripts]
chmi-hydro = "chmi_hydro:main"
