[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "entur-norway"
version = "0.1.0"
description = "Entur Norway national real-time transit SIRI bridge to Apache Kafka"
authors = []
readme = "README.md"
packages = [{ include = "entur_norway" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.32.3"
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0,<2.0.0"
dataclasses_json = ">=0.6.7"
avro = ">=1.11.3"
entur_norway_producer_data = {path = "entur_norway_producer/entur_norway_producer_data"}
entur_norway_producer_kafka_producer = {path = "entur_norway_producer/entur_norway_producer_kafka_producer"}

[tool.poetry.dev-dependencies]
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
requests-mock = ">=1.12.1"

[tool.poetry.scripts]
entur-norway = "entur_norway:main"
