[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "environment-canada"
version = "0.1.0"
description = "Bridge between Environment Canada SWOB weather observations and Kafka endpoints"
authors = ["Clemens Vasters <clemensv@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.32.3"
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0,<2.0.0"
dataclasses_json = ">=0.6.7"
avro = ">=1.11.3"
environment_canada_producer_data = {path = "environment_canada_producer/environment_canada_producer_data"}
environment_canada_producer_kafka_producer = {path = "environment_canada_producer/environment_canada_producer_kafka_producer"}

[tool.poetry.dev-dependencies]
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
testcontainers = ">=4.8.1"
requests-mock = ">=1.12.1"

[tool.poetry.scripts]
environment-canada = "environment_canada:main"
