[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gdacs"
version = "0.1.0"
description = "Global Disaster Alert and Coordination System bridge"
authors = ["Clemens Vasters <clemensv@microsoft.com>"]
packages = [{ include = "gdacs" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = ">=3.10.5"
avro = ">=1.12.1"
cloudevents = ">=1.11.0,<2.0.0"
confluent-kafka = ">=2.5.3"
dataclasses-json = ">=0.6.7"
gdacs_producer_data = { path = "gdacs_producer/gdacs_producer_data" }
gdacs_producer_kafka_producer = { path = "gdacs_producer/gdacs_producer_kafka_producer" }

[tool.poetry.dev-dependencies]
pytest = ">=8.3.3"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=7.0.0"
flake8 = ">=7.1.1"
pylint = ">=3.2.7"

[tool.poetry.scripts]
gdacs = "gdacs.gdacs:main"
