[project]
name = "geosphere-austria"
version = "0.1.0"
description = "GeoSphere Austria TAWES 10-minute weather observations bridge"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "confluent-kafka",
    "cloudevents",
    "dataclasses_json",
    "avro",
    "geosphere_austria_producer_data",
    "geosphere_austria_producer_kafka_producer",
]

[project.scripts]
geosphere-austria = "geosphere_austria:main"

[tool.setuptools.packages.find]
include = ["geosphere_austria*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
