[build-system]
build-backend = "flit_scm:buildapi"
requires = ["flit_scm"]

[project]
name = "gtfs"
dynamic = ["version"]
authors = [
    { name = "Clemens Vasters", email = "clemensv@microsoft.com"}
]
description = "A trivial command line tool to invoke OpenAI's completion API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31.0",
  "azure-eventhub>=5.11.3",
  "cloudevents>=1.9.0",
  "gtfs-realtime-bindings",
]

[project.scripts]
gtfs-cli = "gtfs.gtfs_cli:main"

[tool.setuptools_scm]
write_to = "gtfs/gtfs/_version.py"
root = ".."