[tool.poetry]
name = "vasters-gtfsrt-bridge"
description = "GTFS-RT Bridge"
authors = ["Clemens Vasters"]
readme = "README.md"
version = "0.1.0"  # Placeholder version, dynamic versioning can be handled with plugins
packages = [{include = "gtfs_rt_bridge", from = "gtfs_rt_bridge/src"}]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
gtfs-rt-producer-data = {path = "gtfs_rt_producer/gtfs_rt_producer_data"}
gtfs-rt-producer-kafka-producer = {path = "gtfs_rt_producer/gtfs_rt_producer_kafka_producer"}
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0"
gtfs-realtime-bindings = ">=1.0.0"
requests = ">=2.32.3"

[tool.poetry.dev-dependencies]
pytest = ">=8.3.3"
flake8 = ">=7.1.1"
pylint = ">=3.2.7"
mypy = ">=1.11.2"
testcontainers = ">=4.8.1"
pytest-asyncio = ">=0.24.0"

[tool.poetry.scripts]
gtfs-bridge = "gtfs_rt_bridge.gtfs_cli:cli"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"