[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jma-bosai-quake"
version = "0.1.0"
description = "Bridge JMA Bosai earthquake reports to Kafka as CloudEvents"
authors = ["Clemens Vasters <clemensv@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.32.3"
urllib3 = ">=2.7.0"
idna = ">=3.15"
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0,<2.0.0"
dataclasses_json = ">=0.6.7"
avro = ">=1.11.3"
jma_bosai_quake_producer_data = {path = "jma_bosai_quake_producer/jma_bosai_quake_producer_data"}
jma_bosai_quake_producer_kafka_producer = {path = "jma_bosai_quake_producer/jma_bosai_quake_producer_kafka_producer"}

[tool.poetry.dev-dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=5.0.0"
requests-mock = ">=1.12.1"

[tool.poetry.scripts]
jma-bosai-quake = "jma_bosai_quake:main"
