[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jma-japan"
version = "0.1.0"
description = "JMA Japan Weather Bulletins bridge to Apache Kafka"
authors = ["Clemens Vasters <clemensv@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.32.3"
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0,<2.0.0"
dataclasses_json = ">=0.6.7"
avro = "^1.12.1"
jma_japan_producer_data = {path = "jma_japan_producer/jma_japan_producer_data"}
jma_japan_producer_kafka_producer = {path = "jma_japan_producer/jma_japan_producer_kafka_producer"}

[tool.poetry.dev-dependencies]
pytest = ">=8.3.2"
pytest-cov = ">=5.0.0"
testcontainers = ">=4.8.1"
requests-mock = ">=1.12.1"

[tool.poetry.scripts]
jma-japan = "jma_japan:main"
