[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "madrid-traffic"
version = "0.1.0"
description = "Madrid Real-Time Traffic (Informo) bridge to Apache Kafka"
authors = ["Clemens Vasters <clemensv@microsoft.com>"]
packages = [{ include = "madrid_traffic" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.31.0"
confluent-kafka = ">=2.5.3"
cloudevents = ">=1.11.0,<2.0.0"
dataclasses-json = ">=0.6.7"
avro = "^1.12.1"
madrid_traffic_producer_data = { path = "madrid_traffic_producer/madrid_traffic_producer_data" }
madrid_traffic_producer_kafka_producer = { path = "madrid_traffic_producer/madrid_traffic_producer_kafka_producer" }

[tool.poetry.dev-dependencies]
pytest = ">=8.3.3"
testcontainers = ">=4.8.1"

[tool.poetry.scripts]
madrid-traffic = "madrid_traffic:main"
